<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_m"
        tools:context=".CredentialsActivity">

    <TextView
            android:id="@+id/user_name_label"
            android:layout_width="@dimen/credentials_input_label_width"
            android:layout_height="wrap_content"
            android:text="@string/credentials_user_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_name_input"
            app:layout_constraintBottom_toBottomOf="@id/user_name_input"
    />

    <TextView
            android:id="@+id/token_label"
            android:layout_width="@dimen/credentials_input_label_width"
            android:layout_height="wrap_content"
            android:text="@string/credentials_token_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/token_input"
            app:layout_constraintBottom_toBottomOf="@id/token_input"
    />

    <EditText
            android:id="@+id/user_name_input"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:hint="@string/credentials_user_hint"
            android:inputType="textPersonName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_name_label"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <EditText
            android:id="@+id/token_input"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:hint="@string/credentials_token_hint"
            android:inputType="textVisiblePassword"
            app:layout_constraintTop_toBottomOf="@id/user_name_input"
            app:layout_constraintStart_toEndOf="@id/token_label"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <Button
            android:id="@+id/show_contributors_button"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/credentials_show_contributors_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/token_input"
    />

</android.support.constraint.ConstraintLayout>
